--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,3 +1,62 @@
 {
-  
+    "get_your_favourite_food_in": "احصل على طعامك المفضل",
+    "get": "احصل على",
+    "use_coupon": "استخدم الخصم",
+    "apply_coupon": "قم بتطبيق الخصم",
+    "50%_off": "خصم 50%",
+    "for_new_user!": "للمستخدم الجديد!",
+    "20_mins": "20 دقيقة",
+    "store_is_currently_closed": "المتجر مغلق حاليًا",
+    "dont_worry!": "لا تقلق!",
+    "you_can_still_browse_offers_and_add_to_cart_for_a_speedy_check_out,": "لا يزال بإمكانك تصفح العروض وإضافتها إلى عربة التسوق لإجراء حجز سريع ،",
+    "opens_today_at_1000": "يُفتح اليوم في العاشرة",
+    "am": "صباحًا",
+    "ok_get_it": "حسنًا",
+    "where_&_when?": "أين ومتى؟",
+    "delivery": "توصيل",
+    "pickup": "استلام",
+    "delivering_to": "توصيل إلى",
+    "deliver_in": "استلام من",
+    "now_within_20_minutes": "الآن خلال 20 دقيقة",
+    "change_mood": "نمط التغيير",
+    "your_item_is_not_available": "العنصر الخاص بك غير متوفر",
+    "we_are_sorry_about_that_the_item_is_not_available_in_this_branch.": "نأسف لعدم توفر العنصر في هذا الفرع.",
+    "please_change_the_branch_or_re-order_again": "برجاء تغيير الفرع أو إعادة الطلب مرة أخرى",
+    "change_branch": "تغيير الفرع",
+    "change_order": "تغيير الطلب",
+    "sign_in/": "تسجيل الدخول",
+    "register": "قم بالتسجيل",
+    "to_add_favourite": "لإضافة المفضلة",
+    "you_first_need_to_sign_in_register_to_add_something_to_your_favourite_list": "تحتاج أولاً إلى تسجيل الدخول / التسجيل لإضافة شيء ما إلى قائمتك المفضلة",
+    "register_an_account": "تسجيل حساب",
+    "skip_for_now": "التخطي حاليًا",
+    "we_ve_noticed_it_s_a_different_area": "لقد لاحظنا أنها منطقة مختلفة",
+    "this_location_is_out_of_the_selected_area.": "هذا الموقع خارج المنطقة المحددة.",
+    "please_set_another_location_on_the_map_or_change_the_area": "يرجى تعيين موقع آخر على الخريطة أو تغيير المنطقة",
+    "change_area": "تغيير المنطقة",
+    "back": "الرجوع",
+    "cancel_order": "إلغاء الطلب",
+    "why_did_you_cancel_this_order?": "why did you cancel this order?",
+    "to_help_provide_the_right_next_step_please_let_us_know_why_you_canceled_your_order": "للمساعدة في الدعم في الخطوة التالية، من فضلك اجعلنا نعرف سبب إلغاء طلبك.",
+    "order_is_taking_long_time": "الطلب يستغرق وقتًا طويلًا",
+    "placed_order_by_accident": "تم الطلب بالصدفة",
+    "change_payment_method": "تغيير طريقة الدفع",
+    "forgot_to_add_something": "نسيت أن تضيف شيئًا.",
+    "wrong_address": "عنوان خاطئ",
+    "other": "أخرى",
+    "continue": "استمر",
+    "a_cancellation_of": "إلغاء",
+    "kd": "دينار كويتي",
+    "has_been_issued_back_to_your_original_payment_method.": "تم إصدارها إلى طريقة الدفع الأصلية الخاصة بك",
+    "this_may_take_3_business_days_to_reflect.": "هذا ربما سيستغرق 3 أيام عمل لينعكس",
+    "confirm_cancellation": "تأكيد الإلغاء",
+    "need_help?": "تحتاج مساعدة؟",
+    "how_can_we_help_you?": "كيف يمكننا مساعدتك؟",
+    "if_you_have_any_technical_problem_or_problem_with_the_order_please_contact_us_via_voice_call_or_by_chatting_via_whatsapp_or_our_messenger.": "إذا كانت لديك أي مشكلة فنية أو مشكلة في الطلب ، فيرجى الاتصال بنا عبر مكالمة صوتية أو عن طريق الدردشة عبر الواتس آب أو برنامج الماسنجر الخاص بنا.",
+    "call_us": "اتصل بنا",
+    "message_us": "راسلنا",
+    "leave_a_feedback": "اترك رأيك",
+    "your_name_optional": "اسمك (اختياري)",
+    "phone_number_optional": "رقم هاتف (اختياري)",
+    "your_comment": "تعليقك"
 }
