--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,3 +1,17 @@
 {
-  
+    "powered_by_queue": "powered by queue",
+    "return_policy" : "return policy",
+    "shipping_policy" : "shipping policy",
+    "privacy_policy" :  "privacy policy",
+    "more":"more",
+    "menu":"menu",
+    "my_cart":"my cart",
+    "my_orders":"my orders",
+    "wishlist":"wishlist",
+    "my_addresses":"my addresses",
+    "rights_reserved":"All Rights Reserved To Mcdonald's 2023 ©",
+    "sign_in":"sign in",
+    "to_orderfast_now":"to Order fast Now",
+    "Welcome_back":"Welcome back",
+    "sign_out":"sign out"
 }
