--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -58,5 +58,28 @@
     "leave_a_feedback": "اترك رأيك",
     "your_name_optional": "اسمك (اختياري)",
     "phone_number_optional": "رقم هاتف (اختياري)",
-    "your_comment": "تعليقك"
+    "your_comment": "تعليقك",
+    "your_number": "رقم هاتفك",
+    "save_your_addresses": "حفظ عناوينك",
+    "save_your_contact_information": "حفظ معلومات الاتصال الخاصة بك",
+    "one-tap_re-ordering": "إعادة الطلب بنقرة واحدة",
+    "tracking_orders": "تتبع الطلبات",
+    "account_info": "معلومات الحساب",
+    "verify_your_mobile_number": "التحقق من رقم الهاتف",
+    "you_ll_receive_a_one_time_password_shortly.": "ستتلقى قريبًا كلمة مرور لمرة واحدة",
+    "send_otp": "إرسال كلمة مرور لمرة واحدة",
+    "or_continue_as": "أو استمر كـ",
+    "guest": "زائر",
+    "otp_verification": "التحقق من كلمة المرور لمرة واحدة",
+    "confirmation_your_number": "تأكيد رقم هاتفك",
+    "please_enter_the_4-digit_code_that_was_sent_to_the_number": "برجاء إدخال الكود المكون من 4 أرقام الذي تم إرساله إلى هاتفك",
+    "you_ll_receive_code_in_0100": "سوف تستقبل كود خلال دقيقة",
+    "verify": "تحقق",
+    "complete_your_account_info": "أكمِل بيانات حسابك",
+    "enter_your_name_and_email_to_end": "أدخِل الاسم والإيميل للإنهاء",
+    "your_email_optional": "الإيميل اختياري",
+    "resend": "إعادة الإرسال",
+    "phone_number": "رقم الهاتف",
+    "submit": "إرسال",
+    "full_name": "الاسم الكامل"
 }
