--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -73,5 +73,6 @@
     "leave_a_feedback": "اترك رأيك",
     "your_name_optional": "اسمك (اختياري)",
     "phone_number_optional": "رقم هاتف (اختياري)",
-    "your_comment": "تعليقك"
+    "your_comment": "تعليقك",
+  "categories":"الفئات"
 }
