--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,20 +1,20 @@
 {
-    "powered_by_queue": "powered by queue",
-    "return_policy" : "return policy",
-    "shipping_policy" : "shipping policy",
-    "privacy_policy" :  "privacy policy",
-    "more":"more",
-    "menu":"menu",
-    "my_cart":"my cart",
-    "my_orders":"my orders",
-    "wishlist":"wishlist",
-    "my_addresses":"my addresses",
-    "rights_reserved":"All Rights Reserved To Mcdonald's 2023 ©",
-    "sign_in":"sign in",
-    "to_orderfast_now":"to Order fast Now",
-    "Welcome_back":"Welcome back",
-    "sign_out":"sign out",
-    "get_your_favourite_food_in": "get your favourite food in",
+  "powered_by_queue": "powered by queue",
+  "return_policy" : "return policy",
+  "shipping_policy" : "shipping policy",
+  "privacy_policy" :  "privacy policy",
+  "more":"more",
+  "menu":"menu",
+  "my_cart":"my cart",
+  "my_orders":"my orders",
+  "wishlist":"wishlist",
+  "my_addresses":"my addresses",
+  "rights_reserved":"All Rights Reserved To Mcdonald's 2023 ©",
+  "sign_in":"sign in",
+  "to_orderfast_now":"to Order fast Now",
+  "Welcome_back":"Welcome back",
+  "sign_out":"sign out",
+  "get_your_favourite_food_in": "get your favourite food in",
   "get": "get",
   "use_coupon": "use coupon",
   "apply_coupon": "apply coupon",
@@ -98,5 +98,14 @@
   "complete_your_account_info": "complete your account info",
   "enter_your_name_and_email_to_end": "enter your name and email to end",
   "your_email_optional": "your email (optional)",
-  "resend": "resend"
+  "resend": "resend",
+  "kwd": "kwd",
+  "special_instructions": "special instructions",
+  "add_instructions": "add instructions",
+  "start_ordering": "start ordering",
+  "must_select_min_and_max": "must select min and max",
+  "field_must_select_at_least_one": "field must select at least one",
+  "select": "select",
+  "select1": "select 1",
+  "multi_selection": "multi_selection"
 }
