--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -122,5 +122,7 @@
     "field_must_select_at_least_one": "يجب اختيار واحدة على الأقل",
     "select": "اختر",
     "select1": "اختر واحدة",
-    "multi_selection":  "اختيار متعدد"
+    "multi_selection":  "اختيار متعدد",
+    "save_on_orders_above":"وفر في الطلبات الاعلي من "
+    
 }
