--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -123,5 +123,6 @@
   "categories":"categories",
   "whishlist":"whish list",
   "no_wish_list_for_you_yet":"no wish list for you yet",
-  "add_something_to_your_wish_list_to_make_it_easier_to_access_it_later":"add something to your wish list, to make it easier to access it later"
+  "add_something_to_your_wish_list_to_make_it_easier_to_access_it_later":"add something to your wish list, to make it easier to access it later",
+  "save_on_orders_above":"save on orders above "
 }
