--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -115,5 +115,12 @@
   "field_must_select_at_least_one": "field must select at least one",
   "select": "select",
   "select1": "select 1",
-  "multi_selection": "multi_selection"
+  "multi_selection": "multi_selection",
+  "search_products": "search products",
+  "search": "search",
+  "popular_search": "popular search",
+  "no_product_were_found": "no product were found",
+  "check_the_speling_or_try_searching_again": "check the speling or try searching again.",
+  "limited_quantity_will_end_soon": "limited quantity will end soon",
+  "product_image": "product image"
 }
