--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -113,5 +113,12 @@
     "field_must_select_at_least_one": "يجب اختيار واحدة على الأقل",
     "select": "اختر",
     "select1": "اختر واحدة",
-    "multi_selection":  "اختيار متعدد"
+    "multi_selection":  "اختيار متعدد",
+    "search_products": "البحث عن المنتجات",
+    "search": "بحث",
+    "popular_search": "البحث الشائع",
+    "no_product_were_found": "لا يوجد منتج",
+    "check_the_speling_or_try_searching_again": "تحقق من الحروف أو حاول البحث مرة أخرى.",
+    "limited_quantity_will_end_soon": "كمية محدودة ستنتهي قريبا",
+    "product_image": "صورة المنتج"
 }
