--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -120,5 +120,28 @@
     "no_product_were_found": "لا يوجد منتج",
     "check_the_speling_or_try_searching_again": "تحقق من الحروف أو حاول البحث مرة أخرى.",
     "limited_quantity_will_end_soon": "كمية محدودة ستنتهي قريبا",
-    "product_image": "صورة المنتج"
+    "product_image": "صورة المنتج",
+    "orders": "الطلبات",
+    "you_dont_have_any_orders_yet": "ليس لديك أي طلبات حتى الآن",
+    "have_a_tracking_code?_enter_order_id_below_to_track_it": "لديك رمز تتبع؟ أدخل معرف الطلب أدناه لتتبعه",
+    "have_a_order_id?_enter_it_to_track_it": "لديك الرقم التعريفي للطلب؟ أدخله لتعقبه",
+    "upcoming": "القادمة",
+    "order": "الطلب",
+    "total": "الإجمالي",
+    "track_order": "تتبع الطلب",
+    "delivered_successfully": "تم التسليم بنجاح",
+    "re_order": "إعادة الطلب",
+    "view_receipt": "عرض الفاتورة",
+    "cancelled_successfully": "تم الإلغاء بنجاح",
+    "order_id": "الرقم التعريفي للطلب",
+    "no_order_with_this_id": "لا يوجد طلب لهذا الرقم التعريفي",
+    "check_the_id_and_try_again": "تحقق من الرقم التعريفي وأعد المحاولة مرة أخرى",
+    "order_items": "عناصر الطلب",
+    "any_notes_here": "أي ملاحظات هنا",
+    "contact_details": "تفاصيل التواصل",
+    "payment_details": "تفاصيل الدفع",
+    "subtotal": "المجموع الفرعي",
+    "delivery_fees": "مصاريف التوصيل",
+    "order_receipt": "إيصال الطلب",
+    "completed": "المكتملة"
 }
