--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -158,11 +158,28 @@
   "office":"المكتب",
   "contacts_info":"معلومات التواصل",
   "delivery_time":"وقت التوصيل",
-  "special_remarks":"",
-  "add_items":"add items",
-  "payment_method":"payment method",
-  "cash_on_delivery":"cash on delivery",
-  "credit_card":"credit card",
-  "pay_by_knet":"pay by knet",
-  "place_order":"place order"
+  "special_remarks":"special_remarks",
+  "add_items":"اضف منتجات",
+  "payment_method":"طريقة الدفع",
+  "cash_on_delivery":"الدفع عند الاستلام",
+  "credit_card":"بطاقة الائتمان",
+  "pay_by_knet":"الدفع عن طريق كينيت",
+  "place_order":"الاستمرار للدفع",
+  "your_order_has_been_scheduled_successfully":"لقد تم حجز طلبك بنجاح",
+  "scheduled_order":"تحديد موعد الطلب",
+  "edit":"تعديل",
+  "order_summary":"ملخص الطلب",
+  "your_card_will_not_be_charged_until_your_order_is_placed_minutes_before_scheduled_order_time":"لن يتم تحصيل الرسوم من بطاقتك الا قبل دقائق من تحديد موعد الطلب",
+  "your_order_is_successfully_done":"لقد تم حجز الطلب بنجاح.",
+  "success_msg":"عند الانتهاء من تجهيز طلبك سوف نتواصا معك . يمكن ان نتواصل معك لتاكيد معلومات الطلب",
+  "estimated_time":"الوقت المتوقع",
+  "the_payment_process_has_failed":"لقد فشلت عمليه الدفع.",
+  "failure_msg":"نحن اسفون لقد فشلت عمليه الدفع بسبب بعض المشاكل. لا تقلق هذا يحدث عاده ,يمكنك التواصل مع الدعم الفني او المطعم",
+  "date_time":"التاربخ و الوقت",
+  "order_type":"نوع الطلب",
+  "payment_card":"بطاقة الدفع",
+  "contact_info":"معاومات التواصل",
+  "need_help_call_us":"تحتاج مساعدة؟ اتصل بنا"
+
+
 }
