--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -164,5 +164,20 @@
   "cash_on_delivery":"cash on delivery",
   "credit_card":"credit card",
   "pay_by_knet":"pay by knet",
-  "place_order":"place order"
+  "place_order":"place order",
+  "your_order_has_been_scheduled_successfully":"your order has been scheduled successfully",
+  "scheduled_order":"scheduled order",
+  "edit":"edit",
+  "order_summary":"order summary",
+  "your_card_will_not_be_charged_until_your_order_is_placed_minutes_before_scheduled_order_time":"your card will not be charged until your order is placed minutes before scheduled order time",
+  "your_order_is_successfully_done":"your order is successfully done.",
+  "success_msg":"When we finish preparing your order, you will receive a voice call from us . We may contact you to confirm delivery information",
+  "estimated_time":"estimated time",
+  "the_payment_process_has_failed":"the payment process has failed.",
+  "failure_msg":"We are sorry for that , your payment for the order has failed due to some issue. Don't worry, this usually happens, you can contact technical support or the restaurant for help.",
+  "date_time":"date & time",
+  "order_type":"order type",
+  "payment_card":"payment card",
+  "contact_info":"contact info",
+  "need_help_call_us":"need help ? call us"
 }
