edit guestmodal style

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -123,6 +123,7 @@
   "select_time": "اختر وقت",
   "set_time": "حدد الوقت",
   "today": "اليوم",
-  "tomorrow": "غدًا"
+  "tomorrow": "غدًا",
+  "fill_name": "أدخِل الاسم"
 
 }
