--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -188,5 +188,6 @@
   "scheduled_order": "scheduled order",
   "set_time": "set time",
   "today": "today",
-  "tomorrow": "tomorrow"
+  "tomorrow": "tomorrow",
+  "price_on_selection":"price on selection"
 }
