--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -131,5 +131,6 @@
   "special_instructions": "تعليمات خاصة",
   "optional": "اختياري",
   "select": "اختر",
-  "price_on_selection":"السعر عند الاختيار"
+  "price_on_selection":"السعر عند الاختيار",
+  "add_to_cart": "أضف إلى عربة التسوق"
 }
