--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -35,8 +35,11 @@
   "now_within_20_minutes": "now within 20 minutes",
   "change_mood": "change mood",
   "your_item_is_not_available": "your item is not available",
-  "we_are_sorry_about_that_the_item_is_not_available_in_this_branch.": "we are sorry about that the item is not available in this branch.",
-  "please_change_the_branch_or_re-order_again": "please change the branch or re-order again",
+  "we_are_sorry_about_that_the_item_is_not_available_in": "we are sorry about that the item is not available in this",
+  "please_change": "please change",
+  "the_branch": "the branch",
+  "the_area": "the area",
+  "or_re-order_again": "or re-order again",
   "change_branch": "change branch",
   "change_order": "change order",
   "sign_in/": "sign in/",
@@ -193,5 +196,10 @@
   "min_order":"min order",
   "optional": "optional",
   "price_on_selection":"price on selection",
-  "add_to_cart": "add to cart"
+  "add_to_cart": "add to cart",
+  "item_added_successfully": "added",
+  "this_branch": "this branch",
+  "this_area": "this area",
+  "select_address": "select address",
+  "search_for_cities_and_areas": "search for cities and areas"
 }
