--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -122,7 +122,7 @@
   "field_must_select_at_least_one": "field must select at least one",
   "select": "select",
   "select1": "select 1",
-  "multi_selection": "multi_selection",
+  "multi_selection": "multi selection",
   "categories": "categories",
   "whishlist": "whish list",
   "no_wish_list_for_you_yet": "no wish list for you yet",
