--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -137,14 +137,25 @@
   "optional": "اختياري",
   "select": "اختر",
   "price_on_selection":"السعر عند الاختيار",
-  "open":"مفتوح الان",
-  "closed":"مغلق",
-  "busy":"مشغول",
   "add_to_cart": "أضف إلى عربة التسوق",
   "item_added_successfully" : "تم الإضافة",
   "this_branch": "هذا الفرع",
   "this_area": "هذه المنطقة",
   "select_address": "اختر عنوان",
   "search_for_cities_and_areas": "ابحث عن مدن ومناطق",
-  "multi_selection": "متعدد الخيارات"
+  "multi_selection": "متعدد الخيارات",
+  "your_order_is_successfully_done": ".تم الطلب بنجاح",
+  "estimated_time": "الوقت المتوقع",
+  "success_msg":"عندما ننتهي من تجهيز طلبك ، ستتلقى مكالمة صوتية منا. قد نتصل بك لتأكيد معلومات التسليم",
+  "order_id": "الرقم التعريفي للطلب",
+  "your_address": "عنوانك",
+  "contact_info": "معلومات الاتصال",
+  "delivery_time": "وقت التوصيل",
+  "payment_method": "طريقة الدفع",
+  "your_card_will_not_be_charged_until_your_order_is_placed_minutes_before_scheduled_order_time":"لن يتم تحصيل الرسوم من بطاقتك حتى يتم تقديم طلبك قبل دقائق من موعد الطلب المحدد",
+  "order_items": "عناصر الطلب",
+  "contact_us": "اتصل بنا",
+  "cash_on_delivery": "الدفع عند الاستلام",
+  "order": "طلب"
+
 }
