--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -204,5 +204,6 @@
   "this_branch": "this branch",
   "this_area": "this area",
   "select_address": "select address",
-  "search_for_cities_and_areas": "search for cities and areas"
+  "search_for_cities_and_areas": "search for cities and areas",
+  "contact_us": "contact us"
 }
