--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -148,5 +148,7 @@
   "search_for_cities_and_areas": "ابحث عن مدن ومناطق",
   "multi_selection": "متعدد الخيارات",
   "cart_updated_successfully" : "تم تحديث عربة التسوق",
-  "quantity_of_out_of_stock" : "هذا المنتج غير متاح"
+  "quantity_of_out_of_stock" : "هذا المنتج غير متاح",
+  "promo_code_is_invalid" : "رقم الكوبون غير صحيح",
+  "promo_code_validation" : "تم تفعيل كود الخصم"
 }
