--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -206,5 +206,7 @@
   "select_address": "select address",
   "search_for_cities_and_areas": "search for cities and areas",
   "cart_updated_successfully": "cart updated",
-  "quantity_of_out_of_stock": "quantity of out of stock"
+  "quantity_of_out_of_stock": "quantity of out of stock",
+  "promo_code_is_invalid": "promo code is invalid",
+  "promo_code_validation": "promo code activated and applied on your cart."
 }
