--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -150,5 +150,6 @@
   "cart_updated_successfully" : "تم تحديث عربة التسوق",
   "quantity_of_out_of_stock" : "هذا المنتج غير متاح",
   "promo_code_is_invalid" : "رقم الكوبون غير صحيح",
-  "promo_code_validation" : "تم تفعيل كود الخصم"
+  "promo_code_validation" : "تم تفعيل كود الخصم",
+  "remove":"ازاله"
 }
