--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -174,6 +174,7 @@
   "office": "office",
   "contacts_info": "contacts info",
   "delivery_time": "delivery time",
+  "pickup_time":"pickup time",
   "special_remarks": "special remarks",
   "add_items": "add items",
   "payment_method": "payment method",
@@ -212,5 +213,9 @@
   "remove":"remove",
   "contact_us": "contact us",
   "review_order":"review order",
-  "please_select_payment_method": "please select payment method"
+  "please_select_payment_method": "please select payment method",
+  "no_notes_added":"no notes added",
+  "branch_address":"branch address",
+  "apartment":"apartment",
+  "house":"house"
 }
