--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -144,17 +144,10 @@
   "select_address": "اختر عنوان",
   "search_for_cities_and_areas": "ابحث عن مدن ومناطق",
   "multi_selection": "متعدد الخيارات",
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-=======
-  "cart_updated_successfully" : "تم تحديث عربة التسوق",
   "quantity_of_out_of_stock" : "هذا المنتج غير متاح",
   "promo_code_is_invalid" : "رقم الكوبون غير صحيح",
   "promo_code_validation" : "تم تفعيل كود الخصم",
   "remove":"ازاله",
->>>>>>> structure
->>>>>>> esraa
   "your_order_is_successfully_done": ".تم الطلب بنجاح",
   "estimated_time": "الوقت المتوقع",
   "success_msg":"عندما ننتهي من تجهيز طلبك ، ستتلقى مكالمة صوتية منا. قد نتصل بك لتأكيد معلومات التسليم",
@@ -168,16 +161,6 @@
   "order_items": "عناصر الطلب",
   "contact_us": "اتصل بنا",
   "cash_on_delivery": "الدفع عند الاستلام",
-<<<<<<< HEAD
-  "order": "طلب"
-
-=======
-  "cart_updated_successfully" : "تم تحديث عربة التسوق",
-  "quantity_of_out_of_stock" : "هذا المنتج غير متاح",
-  "promo_code_is_invalid" : "رقم الكوبون غير صحيح",
-  "promo_code_validation" : "تم تفعيل كود الخصم"
->>>>>>> structure
-=======
   "order": "طلب",
   "cart_updated_successfully" : "تم تحديث عربة التسوق",
   "review_order":"مراجعة الطلب",
@@ -185,6 +168,6 @@
   "no_notes_added":"لا يوجد ملاحظات",
   "branch_address":"عنوان الفرع",
   "apartment":"شقه",
-  "house":"منزل"
->>>>>>> esraa
+  "house":"منزل",
+  "you_dont_have_any_orders_yet": "ليس لديك طلبات حتى الآن"
 }
