--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -169,5 +169,9 @@
   "branch_address":"عنوان الفرع",
   "apartment":"شقه",
   "house":"منزل",
-  "you_dont_have_any_orders_yet": "ليس لديك طلبات حتى الآن"
+  "you_dont_have_any_orders_yet": "ليس لديك طلبات حتى الآن",
+  "open":"مفتوح الان",
+  "close":"مغلق",
+  "busy":"مشغول"
+
 }
