--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -198,7 +198,7 @@
   "optional": "optional",
   "price_on_selection":"price on selection",
   "open":"open now",
-  "closed":"closed",
+  "close":"closed",
   "busy":"busy",
   "add_to_cart": "add to cart",
   "item_added_successfully": "added",
