--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -172,6 +172,8 @@
   "you_dont_have_any_orders_yet": "ليس لديك طلبات حتى الآن",
   "open":"مفتوح الان",
   "close":"مغلق",
-  "busy":"مشغول"
+  "busy":"مشغول",
+  "network_is_not_available_please_check_your_internet": "network is not available, please check your internet",
+  "network_is_not_available_please_check_your_internet_or_the_item_you_looking_for_does_not_exist": "network is not available, please check your internet. or the element  you are looking for is not currently available."
 
 }
