--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -64,7 +64,7 @@
   "other": "أخرى",
   "continue": "استمر",
   "a_cancellation_of": "إلغاء",
-  "kd": "دينار كويتي",
+  "kd": "د. ك",
   "has_been_issued_back_to_your_original_payment_method.": "تم إصدارها إلى طريقة الدفع الأصلية الخاصة بك",
   "this_may_take_3_business_days_to_reflect.": "هذا ربما سيستغرق 3 أيام عمل لينعكس",
   "confirm_cancellation": "تأكيد الإلغاء",
@@ -174,6 +174,6 @@
   "close":"مغلق",
   "busy":"مشغول",
   "network_is_not_available_please_check_your_internet": "network is not available, please check your internet",
-  "network_is_not_available_please_check_your_internet_or_the_item_you_looking_for_does_not_exist": "network is not available, please check your internet. or the element  you are looking for is not currently available."
-
+  "network_is_not_available_please_check_your_internet_or_the_item_you_looking_for_does_not_exist": "network is not available, please check your internet. or the element  you are looking for is not currently available.",
+  "limited_quantity_will_end_soon": "كميه محدود ستنتهي قريبًا"
 }
