--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -219,5 +219,7 @@
   "apartment":"apartment",
   "house":"house",
   "network_is_not_available_please_check_your_internet": "network is not available, please check your internet",
-  "network_is_not_available_please_check_your_internet_or_the_item_you_looking_for_does_not_exist": "network is not available, please check your internet. or the element  you are looking for is not currently available."
+  "network_is_not_available_please_check_your_internet_or_the_item_you_looking_for_does_not_exist": "network is not available, please check your internet. or the element  you are looking for is not currently available.",
+  "close_at":"close at",
+  "open_at":"open at"
 }
