--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -182,5 +182,23 @@
   "no_timing_available": "لا يوجد أوقات",
   "info_saved": "تم حفظ البيانات",
   "save_address": "حفظ العنوان",
-  "order_created_successfully" : "شكرا .. تم إتمام طلبك"
+  "order_created_successfully" : "شكرا .. تم إتمام طلبك",
+  "our_branches": "فروعنا",
+  "min_order_with_delivery": "أقل طلب للتوصيل",
+  "opening_hours": "ساعات العمل",
+  "payment_options": "خيارات الدفع",
+  "leave_feedback_desc": "رأيك يهمنا، قم بالتقييم الآن",
+  "phone_no": "رقم الهاتف",
+  "city_and_area": "مدينة ومنطقة",
+  "street": "شارع",
+  "house_no": "رقم المنزل",
+  "building_no": "رقم المبنى",
+  "floor_no": "رقم الدور",
+  "apartment_no": "رقم الشقة",
+  "office_no": "رقم المكتب",
+  "notice": "ملاحظة",
+  "other_phone_no": "رقم هاتف آخر",
+  "address_details": "تفاصيل العنوان",
+  "office": "مكتب",
+  "out_stock": "نفذت الكمية"
 }
