--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -229,5 +229,22 @@
   "info_saved": "info saved",
   "save_address": "save address",
   "order_created_successfully": "thank you .. your order has been placed.",
-  "fill_name": "fill name"
+  "fill_name": "fill name",
+  "our_branches": "our branches",
+  "min_order_with_delivery": "min order with delivery",
+  "opening_hours": "opening hours",
+  "payment_options": "payment options",
+  "leave_feedback_desc": "your opinion matters, rate us now",
+  "phone_no": "phone number",
+  "city_and_area": "city and area",
+  "street": "street",
+  "house_no": "house number",
+  "building_no": "building number",
+  "floor_no": "floor number",
+  "apartment_no": "apartment number",
+  "office_no": "office number",
+  "notice": "notice",
+  "other_phone_no": "other phone number",
+  "address_details": "address details",
+  "out_stock": "out stock"
 }
