--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -183,5 +183,11 @@
   "no_timing_available": "لا يوجد أوقات",
   "info_saved": "تم حفظ البيانات",
   "save_address": "حفظ العنوان",
-  "order_created_successfully" : "شكرا .. تم إتمام طلبك"
+  "order_created_successfully" : "شكرا .. تم إتمام طلبك",
+  "language_changed_successfully" : "تم تغير اللغة",
+  "pickup_now":"استلام الان",
+  "delivery_now":"توصيل الان الي",
+  "pickup_later":"استلام",
+  "delivery_later":"توصيل",
+  "deliver_to":"توصيل الي"
 }
