--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -179,7 +179,7 @@
   "now_within": "الآن خلال",
   "please_review_sections_some_r_required" : "اختيارات مطلوبة",
   "address_saved_successfully": "تم حفظ العنوان بنجاح",
-  "no_timing_available": "لا يوجد أوقات",
+  "no_timings_available": "لا يوجد أوقات متاحة",
   "info_saved": "تم حفظ البيانات",
   "save_address": "حفظ العنوان",
   "order_created_successfully" : "شكرا .. تم إتمام طلبك",
@@ -200,5 +200,29 @@
   "other_phone_no": "رقم هاتف آخر",
   "address_details": "تفاصيل العنوان",
   "office": "مكتب",
-  "out_stock": "نفذت الكمية"
+  "out_stock": "نفذت الكمية",
+  "must_select_min_and_max" : "يجب اختيار أقل كمية {{min}} وأقصى كمية {{max}}",
+  "select1": "اختيار واحد",
+  "field_must_select_at_least_one" : "يجب عليك اختيار حقل واحد فقط على الاقل",
+  "confirm": "تأكيد",
+  "language_changed_successfully" : "تم تغير اللغة",
+  "deliver_now_to": "توصيل الآن إلى",
+  "change": "تغيير",
+  "yes": "نعم",
+  "no": "لا",
+  "minutes": "دقيقة",
+  "scheduled_order": "طلب مسبق",
+  "area_selected": "تم اختيار المنطقة",
+  "branch_selected": "تم اختيار الفرع",
+  "pickup_from": "استلام من",
+  "verify_ur_mobile": "تحقق من الهاتف",
+  "u_will_receive_a_one_time_password_shortly": "سوف تستقبل رسالة تأكيد لمرة واحدة",
+  "save_ur_address": "حفظ عنوانك",
+  "save_ur_contact_information": "حفظ معلومات الاتصال بك",
+  "one_tap_re_order": "إعادة الطلب بنقرة واحدة",
+  "or_continue_as_guest": "أو استمر كزائر",
+  "track_order": "تتبع الطلب",
+  "enter_your_name": "أدخِل اسمك ",
+  "guest_info": "بيانات الضيف",
+  "email_optional": "الإيميل (اختياري)"
 }
