--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -118,8 +118,6 @@
   "special_instructions": "special instructions",
   "add_instructions": "add instructions",
   "start_ordering": "start ordering",
-  "must_select_min_and_max": "must select min and max",
-  "field_must_select_at_least_one": "field must select at least one",
   "select": "select",
   "select1": "select 1",
   "multi_selection": "multi-selection",
@@ -225,7 +223,7 @@
   "now_within": "now within",
   "please_review_sections_some_r_required": "required fields",
   "address_saved_successfully": "address saved successfully",
-  "no_timing_available": "no timing available",
+  "no_timings_available": "no timings available",
   "info_saved": "info saved",
   "save_address": "save address",
   "order_created_successfully": "thank you .. your order has been placed.",
@@ -246,5 +244,22 @@
   "notice": "notice",
   "other_phone_no": "other phone number",
   "address_details": "address details",
-  "out_stock": "out stock"
+  "out_stock": "out stock",
+  "must_select_min_and_max": "must choose min {{min}} qty or {{max}} qty.",
+  "field_must_select_at_least_one": "you must select at least one choice.",
+  "confirm": "confirm",
+  "language_changed_successfully": "language changed",
+  "deliver_now_to": "deliver now to",
+  "change": "change",
+  "yes": "yes",
+  "no": "no",
+  "minutes": "minutes",
+  "area_selected": "area selected",
+  "branch_selected": "branch selected",
+  "verify_ur_mobile": "verify your mobile",
+  "u_will_receive_a_one_time_password_shortly": "you will receive a one time password shortly",
+  "save_ur_address": "save your address",
+  "save_ur_contact_information": "save ur contact information",
+  "one_tap_re_order": "one tap re_order",
+  "or_continue_as_guest": "or continue as guest"
 }
