--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -269,5 +269,8 @@
   "save_ur_contact_information": "save ur contact information",
   "one_tap_re_order": "one tap re_order",
   "or_continue_as_guest": "or continue as guest",
-  "promo_is_saved_and_will_be_applied_to_your_cart":"promo is saved and will be applied to your cart"
+  "promo_is_saved_and_will_be_applied_to_your_cart":"promo is saved and will be applied to your cart",
+  "min": "minute",
+  "deivery_fees": "delivery fees",
+  "language_changed_successfully": "language changed"
 }
