--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -233,6 +233,10 @@
   "guest_info": "بيانات الضيف",
   "email_optional": "الإيميل (اختياري)",
   "promo_is_saved_and_will_be_applied_to_your_cart":"تم حفظ كود الخصم و سيتم تطبيقه علي عبه التسوق الخاصة بك",
-  "coupon_value" : "قيمة الخصم"
+  "coupon_value" : "قيمة الخصم",
+  "to_your_cart_to_free_delivery":"الي عربه التسوق لتسليم مجانا",
+  "add":"اضف",
+  "free_delivery_on_orders_above":"تسليم مجانا علي الطلبات الاعلي من"
+
 
 }
