modals font - style enhancement

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -24,9 +24,9 @@
   "store_is_currently_closed": "المتجر مغلق حاليًا",
   "dont_worry!": "لا تقلق!",
   "you_can_still_browse_offers_and_add_to_cart_for_a_speedy_check_out,": "لا يزال بإمكانك تصفح العروض وإضافتها إلى عربة التسوق لإجراء حجز سريع ،",
-  "opens_today_at_1000": "يُفتح اليوم في العاشرة",
+  "opens_today_at": "يُفتح اليوم في",
   "am": "صباحًا",
-  "ok_get_it": "حسنًا",
+  "ok_get_it": "حسنًا !",
   "where_&_when?": "أين ومتى؟",
   "delivery": "توصيل",
   "pickup": "استلام",
@@ -54,7 +54,7 @@
   "change_area": "تغيير المنطقة",
   "back": "الرجوع",
   "cancel_order": "إلغاء الطلب",
-  "why_did_you_cancel_this_order?": "why did you cancel this order?",
+  "why_did_you_cancel_this_order?": "why did you cancel this order ?",
   "to_help_provide_the_right_next_step_please_let_us_know_why_you_canceled_your_order": "للمساعدة في الدعم في الخطوة التالية، من فضلك اجعلنا نعرف سبب إلغاء طلبك.",
   "order_is_taking_long_time": "الطلب يستغرق وقتًا طويلًا",
   "placed_order_by_accident": "تم الطلب بالصدفة",
@@ -76,7 +76,7 @@
   "leave_a_feedback": "اترك رأيك",
   "your_name_optional": "اسمك (اختياري)",
   "phone_number_optional": "رقم هاتف (اختياري)",
-  "your_comment": "تعليقك",
+  "your_feedback": "رأيك",
   "categories": "الفئات",
   "whishlist": "قائمة الرغبات",
   "no_wish_list_for_you_yet": "لا يوجد قائمة رغبات لديك",
