--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -24,9 +24,9 @@
   "store_is_currently_closed": "store is currently closed",
   "dont_worry!": "don't worry !",
   "you_can_still_browse_offers_and_add_to_cart_for_a_speedy_check_out": "you can still browse offers and add to cart for a speedy check out,",
-  "opens_today_at_1000": "Opens today at 10:00",
+  "opens_today_at": "Opens today at",
   "am": "am",
-  "ok_get_it": "ok, get it",
+  "ok_get_it": "ok, get it !",
   "where_&_when?": "where & when?",
   "delivery": "delivery",
   "pickup": "pickup",
@@ -54,7 +54,7 @@
   "change_area": "change area",
   "back": "back",
   "cancel_order": "cancel order",
-  "why_did_you_cancel_this_order?": "why did you cancel this order?",
+  "why_did_you_cancel_this_order?": "why did you cancel this order ?",
   "to_help_provide_the_right_next_step_please_let_us_know_why_you_canceled_your_order": "to help provide the right next step please let us know why you canceled your order.",
   "order_is_taking_long_time": "order is taking long time",
   "placed_order_by_accident": "placed order by accident",
@@ -81,7 +81,7 @@
   "leave_a_feedback": "leave a feedback",
   "your_name_optional": "your name (optional)",
   "phone_number_optional": "phone number (optional)",
-  "your_comment": "your comment",
+  "your_feedback": "your feedback",
   "your_cart_is_empty": "your cart is empty",
   "add_some_items_to_your_cart": "add some items to your cart",
   "continue_shopping": "continue shopping",
