--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -247,5 +247,6 @@
   "coupon_value" : "قيمة الخصم",
   "your_upcoming_order":"الطلبات الحاليه",
   "to":"إلى",
-  "info": "معلومات"
+  "info": "معلومات",
+  "from":"من"
 }
